changes in profile controller and routes
